tests/conformance/negative/10-invalid-retries-value.sml
<!-- INVALID: retries is not an integer -->
<!-- Expected: ValidationError::InvalidAttributeValue -->
<skill interface="something" retries="abc">
  Bad retries value.
</skill>
